--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -65,9 +65,8 @@ jobs:
         shell: cmd
         run: |
           dir .\build\
-          dir .\build\src\
-          dir .\build\src\${{env.BUILD_TYPE}}\
-          copy /Y .\build\src\${{env.BUILD_TYPE}}\uncompress.exe .\build\${{ env.RELEASE_NAME }}\
+          dir .\build\${{env.BUILD_TYPE}}\
+          copy /Y .\build\${{env.BUILD_TYPE}}\uncompress.exe .\build\${{ env.RELEASE_NAME }}\
           cd build
           7z a ./${{ env.RELEASE_NAME }}.zip ./${{ env.RELEASE_NAME }}
 
